syntax = "proto3";

package moodle;
import "google/protobuf/timestamp.proto";

service MoodleInfoService {

  // Site 
  rpc GetSiteInfo(SiteInfoRequest) returns (SiteInfoResponse) {}

  // Courses
  rpc ListAllCourses(CoursesRequest) returns (ListCoursesResponse) {}
  rpc GetCourseContents(CourseIdRequest) returns (CourseContentsResponse) {}
  rpc GetUserCourses(UserIdRequest) returns (ListCoursesResponse) {}
  
  // Users
  rpc GetEnrolledUsers(CourseIdRequest) returns (EnrolledUsersResponse) {}
  
  // Assignments
  rpc GetCourseAssignments(CourseIdRequest) returns (AssignmentsResponse) {}
  rpc GetAssignmentsBetweenDates(AssignmentDateRequest) returns (AssignmentsResponse) {}
}

// Common Messages
message Course {
  int32 id = 1;
  string fullname = 2;
  string displayname = 3;
  string idnumber = 4;
  string format = 5;
  int64 timecreated = 6;
  int64 timemodified = 7;
}

message User {
  int32 id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string fullname = 5;
  string email = 6;
  repeated Course enrolled_courses = 7;
  repeated UserRole roles = 8;
}

message UserRole {
  int32 roleid = 1;
  string shortname = 2;
}

message CourseSection {
  int32 id = 1;
  string name = 2;
  int32 section = 3;
  repeated CourseModule modules = 4;
}

message CourseModule {
  int32 id = 1;
  string name = 2;
  repeated ModuleDate dates = 3;
}

message ModuleDate {
  string label = 1;
  int64 timestamp = 2;
}

message Assignment {
  int32 id = 1;
  int32 cmid = 2;
  int32 course = 3;
  string name = 4;
  bool sendnotifications = 5;
  google.protobuf.Timestamp duedate = 6;
  int32 grade = 7;
  string intro = 8;
}

// Request Messages
message SiteInfoRequest {
    // Not needed
}

message CourseIdRequest {
  int32 course_id = 1;
}

message UserIdRequest {
  int32 user_id = 1;
}

message AssignmentDateRequest {
  int32 course_id = 1;
  string start_date = 2;  // Format: YYYY-MM-DD
  string end_date = 3;    // Format: YYYY-MM-DD
}

// Response Messages
message SiteInfoResponse {
  string sitename = 1;
  string siteurl = 2;
  repeated Function functions = 3;
  int32 userid = 4;

}

message CoursesRequest {
}

message Function {
  string name = 1;
  string version = 2;
}

message ListCoursesResponse {
  repeated Course courses = 1;
}

message CourseContentsResponse {
  repeated CourseSection sections = 1;
}

message EnrolledUsersResponse {
  repeated User users = 1;
}

message AssignmentsResponse {
  repeated Assignment assignments = 1;
}




